--- a/app.json
+++ b/app.json
@@ -38,7 +38,7 @@
       "value": ""
     },
     "MEDIA":{
-      "description": "Video Create a start bot",
+      "description": "Video Create a alive bot",
       "required": false,
       "value": ""
     },
